--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,8 +5,8 @@ watchdog==0.9.0
 flake8==3.7.8
 tox==3.14.0
 coverage==4.5.4
-Sphinx==1.8.5
+Sphinx
 twine==1.14.0
-Click==7.0
+Click==8.0.3
 pytest==6.2.4
 black==21.7b0
