--- a/.github/workflows/poetry_build_and_test.yml
+++ b/.github/workflows/poetry_build_and_test.yml
@@ -42,7 +42,9 @@ jobs:
                     path: ~/.cache
                     key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
             -   name: Install dependencies
-                run: poetry install --no-interaction --no-root
+                run: |
+                    poetry update
+                    poetry install --no-interaction --no-root
             -   name: Install Package
                 run: poetry install --no-interaction
             -   name: Build Package
