--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ Click="^8.0.3"
 pytest = "*"
 bandit = "^1.7.0"
 mypy = "^0.812"
+pytest-cov = "^3.0.0"
+codecov = "^2.1.12"
 
 [tool.bandit]
 skips = ["B311", ]
