--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
                     key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements_dev.txt') }}
             -   name: Install dependencies
                 run: |
-                    python -m pip install wheel pytest pytest-cov codecov pandas pyxlsb types-setuptools
-                    pip install -r requirements_dev.txt
+                    python -m pip install wheel pytest pytest-cov codecov pandas pyxlsb types-setuptools --user
+                    pip install -r requirements_dev.txt --user
             -   name: Build wheel using pip
                 run: pip wheel -w DEST_DIR .
                   # to supply options, put them in 'env', like:
