--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
             -   name: Install dependencies
                 run: |
                     python -m pip install wheel pytest pytest-cov codecov pandas pyxlsb types-setuptools
-                    pip install -r requirements_dev.txt --user
+                    pip install -r requirements_dev.txt
             -   name: Build wheel using pip
                 run: pip wheel -w DEST_DIR .
                   # to supply options, put them in 'env', like:
@@ -47,6 +47,7 @@ jobs:
                 if: ${{ matrix.python-version != '3.10' }} # twine is not yet compatible with python 3.10.0
             -   name: Run bandit
                 run: bandit -r pyprojectify/ -c .bandit.yml
+                if: ${{ matrix.os != 'macos-latest' }}
             -   name: Run Typechecker
                 run:  |
                     python -m pip install types-setuptools
