--- a/.github/workflows/poetry_build_and_test.yml
+++ b/.github/workflows/poetry_build_and_test.yml
@@ -59,5 +59,5 @@ jobs:
             -   name: Run Pytest
                 run: poetry run pytest --cov=./pyprojectify/
             -   name: Upload coverage artifacts to codecov
-                run: poetry run codecov --token=secrets.CODECOV_API_TOKEN
+                run: poetry run codecov --token=370386ee-28d7-441f-b4eb-7f63f8c5c3e9
                 if: ${{ matrix.python-version != '3.10' }} # codecov is not yet compatible with python 3.10.0
